--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 .todo-container {
 	margin: 50px auto;
 	width: 500px;
-	background-color: #dddddd;
+	background-color: #ffffff;
 	border-radius: 10px;
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
